2009-03-23  Les Harris  <lharris@gnome.org>

	* src/Makefile.am: Added mud-profile-manager.[ch], removed
	gconf-helper.[ch]
	* src/gconf-helper.[ch]: Removed files.
	* src/gnome-mud.c (main): Removed call to mud_profile_load_profiles().
	* src/mud-profile-manager.[ch]: New class which keeps track of the
	profiles.  This moves this functionality from the profile class
	itself, kills some globals, and generally makes profiles much nicer to
	work with.
	* src/mud-connection-view.c:
	* src/mud-preferences-window.c:
	* src/mud-profile.[ch]:
	* src/mud-window-profile.c:
	* src/mud-window.[ch]: Updated files to work with MudProfileManager
	instead of directly on profiles.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-log.c (mud_log_parse_ecma_color),
	(mud_log_write_html_background_span),
	(mud_log_write_html_xterm_span): Parser now handles
	\x1b[38|48];5;[0-15]m correctly by dropping down to the standard ecma
	colors.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_disconnect),
	(mud_connection_view_reconnect), (mud_connection_view_send): Now stops
	logging on disconnect and reconnect. Added log write hook in send.
	* src/mud-log.c (mud_log_class_init), (mud_log_init),
	(mud_log_get_property), (mud_log_append_toggled_cb),
	(mud_log_input_toggled_cb), (mud_log_color_toggled_cb),
	(mud_log_open): Can no longer append and include color. A new file
	must be written.  Now logs input as a default.
	* ui/main.glade: Added Log Input checkbox in log window.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-log.c: Generates the xterm-256 colors rather than manually
	creating them.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/ecma48.h: Added xterm color sequences.
	* src/mud-log.c: Now supports logging xterm-256 color codes in
	addition to the ECMA-48 codes.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/ecma48.h: New file with some ECMA-48 definitions.